browser_actionなしに変更

--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
       </style>
    </head>
 <body>
-   <input type="checkbox" id="scroll" checked>ON
+   拡張機能： <input type="checkbox" id="scroll" checked>ON
    <script src="popup.js"></script>
 </body>
 </html>
